CHANGES.txt - 04/23/2003
------------------------

CHANGES IN CUPS V1.1.19rc3

	- The pstops filter did not report the correct number of
	  copies for the page_log file when printing collated
	  copies to a printer that doesn't support them in
	  hardware (STR #32)
	- cupsLangGet() needs to set the CTYPE locale to "C"
	  (POSIX) to avoid erroneous tolower/toupper values (fix
	  suggested by Bjoern Jacke)
	- Fixed a typo in the cups.list.in file.
	- Updated all of the Western European locales to default
	  to ISO-8859-15 (for Euro support, suggested by Bjoern
	  Jacke)
	- Updated the German message catalog (update provided by
	  Bjoern Jacke)


CHANGES IN CUPS V1.1.19rc2

	- cupsLangGet() now sets the encoding field based on the
	  trailing charset in the locale name, and doesn't look
	  for a message catalog in a specific locale.charset
	  directory.  This fixes STR #26 and is more in line
	  with the CUPS 1.2 implementation.
	- The configure script now aborts if the "ar" command or
	  compilers cannot be found.
	- The static cupsimage library was not built by default.
	- The path for the "ln" command was hardcoded in
	  Makedefs.in instead of being checked at configure time
	  (STR #28).
	- Banner pages containing unescaped { characters would
	  not work.
	- The printer-state-time collection attribute was
	  encoded as an enumeration instead of an integer.
	- The printer-is-accepting-jobs collection attribute was
	  was not added to the collection value.
	- The printer-state-sequence-number collection attribute
	  was not added to the collection value.
	- Fixed typo and const mismatch in IPP backend.
	- Updated the man pages for the new configuration
	  directives.
	- Updated the SAM for MacOS 10.2, the CUPS drivers for
	  windows, the available LPD backend options, and the
	  new configuration directives.
	- The imagetops filter didn't position images properly
	  on the page (STR #18)
	- The configure script didn't add CPPFLAGS to the